# proxide

./: .editorconfig  .gitattributes  .gitignore  .nvimrc  Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
example_scripts/: forward.rn  intercept.rn  intercept_grpc.rn  noop.rn  static.rn
src/: command_line.rs  config.rs  connection.rs  context.rs  decoders.rs  json.rs  main.rs  proto.pest  proto.rs  search.rs  session.rs  state.rs  ui.rs  ui_state.rs
src/connection/: connect.rs  demux.rs  error.rs  http2.rs  stream.rs  tls.rs
src/connection/scripting/: grpc.rs  handlers.rs  host.rs  http2.rs  mod.rs
src/decoders/: grpc.rs  raw.rs
src/session/: callstack.rs  events.rs  filters.rs  serialization.rs
src/ui/: chords.rs  commands.rs  controls.rs  filters.rs  menus.rs  prelude.rs  state.rs  style.rs  toast.rs  views.rs
src/ui/commands/: colon_command.rs  mod.rs
src/ui/controls/: filters.rs  table_view.rs
src/ui/sub_views/: details_pane.rs  filter_pane.rs  mod.rs  table_view.rs
src/ui/views/: callstack_view.rs  details_view.rs  main_view.rs  message_view.rs  prelude.rs
test/: test_script.sh
test/DotNetGrpc/: DotNetGrpc.sln
test/DotNetGrpc/DotNetGrpc/: DotNetGrpc.csproj  Program.cs  packages.config  service.proto
test/DotNetGrpc/DotNetGrpc/Properties/: AssemblyInfo.cs
test/dotnet_grpc/: Arguments.cs  Blob.cs  GrpcClient.cs  GrpcServer.cs  PerformanceClient.cs  PerformanceServer.cs  Program.cs  dotnet_grpc.csproj  performance.proto  service.proto  types.proto
test/rstack-child/: Cargo.toml
test/rstack-child/src/: main.rs
test/rstack-launcher/: Cargo.toml  build.rs
test/rstack-launcher/src/: lib.rs
test/rust_grpc/: Cargo.toml  LICENSE-MIT  build.rs
test/rust_grpc/proto/: rust_grpc.proto
test/rust_grpc/src/: generator.rs  lib.rs  server.rs
