[package]
name = "proxide"
version = "0.1.0"
authors = ["Mikko Rantanen <jubjub@jubjubnest.net>"]
edition = "2018"
license = "GPL-3.0-only"
description = """
Proxide is a debugging proxy for capturing HTTP/2 and gRPC traffic.
"""
repository = "https://github.com/Rantanen/proxide"
readme = "README.md"
excldue = [ "/test" ]

[dependencies]
h2 = "0.2"
http = "0.2"
bytes = { version = "0.5", features = [ "serde" ] }
log = "0.4"
simplelog = "0.8"
tokio = { version = "0.2", features = [ "full", "sync" ] }
snafu = "0.6"
futures = "0.3"
tui = { version = "0.9", default-features = false, features = [ "crossterm" ] }
crossterm = "0.17"
uuid = { version = "0.8", features = [ "v4", "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
clap = "2"
protofish = { version = "0.2" }
serde = { version = "1", features = ["derive"] }
http-serde = "1"
rmp-serde = "0.14"
lazy_static = "1"
ctrlc = "3"
